2011-06-14  Douglas Bates <bates@stat.wisc.edu>

	* R/fastLm.R, fastLm.Rd, src/fastLm.cpp: Change order of arguments in
	fastLm.cpp and fastLm.R and documentation.

2011-06-13  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Properly export S3methods as such
	* man/fastLm.Rd: Similar updates to help page

2011-04-08  Dirk Eddelbuettel  <edd@debian.org>

	* R/fastLm.R: In print.summary.fastLm(), use 'P.values' not 'P.value'

2011-04-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.1

2011-04-04  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Makefile: Do not call clean in all target

2011-02-28  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Makefile: Call R and Rscript relative to R_HOME/bin

2011-02-11  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/RcppGSL/Makefile: Also create unitTest vignette
	* inst/doc/RcppGSL/RcppGSL-unitTests.Rnw: idem
	* inst/doc/RcppGSL/unitTests/RcppGSL-unitTests.R: idem

2010-12-06  Romain Francois <romain@r-enthusiasts.com>

	* inst/doc/RcppGSL/RcppGSL.Rnw: cosmetics

2010-11-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.0 and initial release

2010-11-29  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/RcppGSLForward.h: vector_view<T> now exposes a conversion
	operator to implicitely convert it to the associated gsl_vector_foo * type.
	Similarly matrix_view<T> expose a conversion operator to the associated
	gsl matrix pointer.

2010-11-28  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/RcppGSLExample/: Started as a means to provide a
	simple yet complete example of using RcppGSL in a user package

	* NEWS: Added with initial notes towards a release

2010-11-27  Romain Francois <romain@r-enthusiasts.com>

	* include/include/*h: Updated to satisfy some grumblings from g++

2010-11-27  Dirk Eddelbuettel  <edd@debian.org>

	* R/fastLm.R: summary() now also computed R2 and adjR2

2010-05-25  Romain Francois <romain@r-enthusiasts.com>
